--- a/back-end-development/pyproject.toml
+++ b/back-end-development/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "alembic>=1.13.2,<2.0.0",
 
     # Config
-    "pydantic>=2.8.0,<3.0.0",
+    "pydantic[email] (>=2.12.5,<3.0.0)",
     "pydantic-settings>=2.4.0,<3.0.0",
     "python-dotenv>=1.0.1,<2.0.0",
     "psycopg2 (>=2.9.11,<3.0.0)"
