--- a/back-end-development/pyproject.toml
+++ b/back-end-development/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "pydantic[email] (>=2.12.5,<3.0.0)",
     "pydantic-settings>=2.4.0,<3.0.0",
     "python-dotenv>=1.0.1,<2.0.0",
-    "psycopg2 (>=2.9.11,<3.0.0)"
+    "psycopg2 (>=2.9.11,<3.0.0)",
+    "azure-storage-blob (>=12.28.0,<13.0.0)"
 ]
 
 [tool.poetry.group.dev.dependencies]
