--- a/back-end-development/pyproject.toml
+++ b/back-end-development/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "pydantic-settings>=2.4.0,<3.0.0",
     "python-dotenv>=1.0.1,<2.0.0",
     "psycopg2 (>=2.9.11,<3.0.0)",
-    "azure-storage-blob (>=12.28.0,<13.0.0)"
+    "azure-storage-blob (>=12.28.0,<13.0.0)",
+    "python-multipart (>=0.0.21,<0.0.22)"
 ]
 
 [tool.poetry.group.dev.dependencies]
