--- a/front-end-development/package.json
+++ b/front-end-development/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
+    "@fullcalendar/timegrid": "^6.1.20",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.562.0",
     "next": "^14.2.35",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
