--- a/front-end-development/package.json
+++ b/front-end-development/package.json
@@ -18,6 +18,7 @@
     "next": "^14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^19.2.3",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
